--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
+  <title>Website</title>
 </head>
 <body>
-  <h1>Hello world</h1>
+  <h1>This is my website</h1>
 </body>
 </html>
