--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <title>Website</title>
 </head>
-<body>
-  <h1>This is my website</h1>
+<body class="dark:bg-black dark:text-white font-mono">
+  <div class="w-32 h-32 dark:bg-black dark:text-white text-slate-500">Hello world</div>
+
+  <button data-aos="fade-up" id="darkmode" class="dark:text-slate-500 dark:bg-white bg-slate-500 text-white p-2 rouded-sm">Toggle Darkmode</button>
+
+
+  <script>
+      AOS.init();
+      document.querySelector('#darkmode').addEventListener('click', ()=>{
+        document.querySelector('html').classList.toggle('dark');
+      })
+  </script>
 </body>
 </html>
