--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Website</title>
 </head>
 <body class="dark:bg-black dark:text-white font-mono">
-  <div class="w-32 h-32 dark:bg-black dark:text-white text-slate-500">Hello world</div>
+  <div class="w-32 h-32 dark:bg-black dark:text-white text-slate-500">I love Ahmed Hassan</div>
 
   <button data-aos="fade-up" id="darkmode" class="dark:text-slate-500 dark:bg-white bg-slate-500 text-white p-2 rouded-sm">Toggle Darkmode</button>
 
