--- a/index.html
+++ b/index.html
@@ -3,17 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./custom.css">
   <link rel="stylesheet" href="./styles.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <title>Website</title>
+  <title>Muhammad Abdullah</title>
 </head>
 <body class="dark:bg-black dark:text-white font-mono">
-  <div class="w-32 h-32 dark:bg-black dark:text-white text-slate-500">I love Ahmed Hassan</div>
+  <header class="py-4" data-aos="fade-down" data-aos-duration="1500">
+    <nav class="flex items-center justify-between px-4">
+      <h1 class="font-bold text-4xl logo">MA</h1>
+      <ul class="flex items-center justify-evenly gap-4">
+        <li>About</li>
+        <li>Skills</li>
+        <li>Contact</li>
+      </ul>
+      <h1 id="darkmode">Dark</h1>
+    </nav>
+  </header>
 
-  <button data-aos="fade-up" id="darkmode" class="dark:text-slate-500 dark:bg-white bg-slate-500 text-white p-2 rouded-sm">Toggle Darkmode</button>
 
 
+  <section>
+    <div class="wrapper">
+      <div class="typing-demo">
+        Hi 👋, I am Muhammad Abdullah
+      </div>
+    </div>
+    <div id="stars"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
+    <div id="title">
+    </div>
+  </section>
   <script>
       AOS.init();
       document.querySelector('#darkmode').addEventListener('click', ()=>{
